--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="menu-toggle">&#9776; Menu</div>
 
     <nav>
+        <div id="close-btn">&times;</div>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Products</a></li>
