--- a/index.html
+++ b/index.html
@@ -7,38 +7,42 @@
     <title>John Bitar and Co</title>
 </head>
 <body>
-
-    <header>
-        <h1>John Bitar and Co</h1>
-        <p>Your source for quality timber products</p>
+    <header class="sticky-header">
+        <nav>
+            <div class="logo">
+                <h1>John Bitar & Co Ltd.</h1>
+            </div>
+            <div id="menu-toggle">&#9776; Menu</div>
+            <ul class="nav-links">
+                <div id="close-btn">&times;</div>
+                <li><a href="Home Page.html">Home</a></li>
+                <li><a href="About.html">About Us</a></li>
+                <li class="dropdown">
+                    <a href="#">Products</a>
+                    <!--<span class="dropdown-icon">▼</span>-->
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Lumber</a></li>
+                        <li><a href="#">Slice Veneer</a></li>
+                        <li><a href="#">Rotary Veneer</a></li>
+                        <li><a href="#">Plywood</a></li>
+                        <li><a href="#">Moulding</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+               <a href="#">Sustainability</a>
+                <ul class="dropdown-menu">
+                    <li><a href="Sustainable_Sourcing.html">Sustainable Timber Sourcing</a></li>
+                    <li><a href="#">Certification & Compliance</a></li>    
+                    <li><a href="#">Sustainable Practices</a></li>
+                    <li><a href="#">Partnerships & Collaborations</a></li>
+                    </ul>
+                </li>
+                <li><a href="Awards.html">Awards</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <div id="menu-toggle">&#9776; Menu</div>
-
-    <nav>
-        <div id="close-btn">&times;</div>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-
-    <section id="hero">
-        <h2>Welcome to John Bitar and Co</h2>
-        <p>Discover a wide range of lumber, veneer, and molding products.</p>
-    </section>
-
-    <section id="featured-products">
-        <h2>Featured Products</h2>
-        <!-- Add your featured products here -->
-    </section>
-
-    <footer>
-        <p>&copy; 2023 John Bitar and Co. All rights reserved.</p>
-    </footer>
-
+  
     <script src="script.js"></script>
 
 </body>
