--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
-    <title>John Bitar and Co</title>
+    <title>John Bitar & Co. LTD</title>
 </head>
 <body>
 
     <header>
-        <h1>John Bitar and Co</h1>
+        <h1>John Bitar & Co. LTD</h1>
         <p>Your source for quality timber products</p>
     </header>
 
@@ -26,7 +26,7 @@
     </nav>
 
     <section id="hero">
-        <h2>Welcome to John Bitar and Co</h2>
+        <h2>Welcome to John Bitar & Co. LTD</h2>
         <p>Discover a wide range of lumber, veneer, and molding products.</p>
     </section>
 
@@ -36,7 +36,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 John Bitar and Co. All rights reserved.</p>
+        <p>&copy; 2023 John Bitar & Co. LTD. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
