--- a/index.html
+++ b/index.html
@@ -4,42 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
-    <title>John Bitar & Co. LTD</title>
+    <title>John Bitar and Co. Ltd</title>
 </head>
 <body>
 
     <header>
-        <h1>John Bitar & Co. LTD</h1>
-        <p>Your source for quality timber products</p>
+        <div class="logo">John Bitar and Co. Ltd</div>
+        <div class="nav-container">
+            <div class="nav">
+                <a href="#">Home</a>
+                <a href="#">About Us</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Products</button>
+                    <div class="dropdown-content">
+                        <a href="#">Lumber</a>
+                        <a href="#">Slice Veneer</a>
+                        <a href="#">Rotary</a>
+                        <a href="#">Plywood</a>
+                        <a href="#">Molding</a>
+                    </div>
+                </div>
+                <a href="#">Sustainability</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Awards</button>
+                    <div class="dropdown-content">
+                        <a href="#">Sustainable Timber Sourcing</a>
+                        <a href="#">Certification and Compliance</a>
+                        <a href="#">Sustainable Practices</a>
+                        <a href="#">Partnerships</a>
+                        <a href="#">Collaborations</a>
+                    </div>
+                </div>
+                <a href="#">Contact</a>
+                <a href="#">Ahmed</a>
+            </div>
+        </div>
+        <div class="menu-icon">&#9776;</div>
     </header>
 
-    <div id="menu-toggle">&#9776; Menu</div>
-
-    <nav>
-        <div id="close-btn">&times;</div>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-
-    <section id="hero">
-        <h2>Welcome to John Bitar & Co. LTD</h2>
-        <p>Discover a wide range of lumber, veneer, and molding products.</p>
-    </section>
-
-    <section id="featured-products">
-        <h2>Featured Products</h2>
-        <!-- Add your featured products here -->
-    </section>
-
-    <footer>
-        <p>&copy; 2023 John Bitar & Co. LTD. All rights reserved.</p>
-    </footer>
+    <!-- Rest of your webpage content goes here -->
 
     <script src="script.js"></script>
-
 </body>
 </html>
