--- a/index.html
+++ b/index.html
@@ -39,7 +39,20 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-</header>
+</header>  
+
+<section class="slideshow-section">
+    <div class="slogan">
+        <h1>CRAFTING TIMBER, SHAPING DREAMS</h1>
+    </div>
+     <div class="slideshow">
+         <img src="images/b6.jpg" alt="Image 1">
+         <img src="images/b7.jpg" alt="Image 2">
+         <img src="images/b8.jpg" alt="Image 3">
+     </div>
+       <a class="prev" onclick="prevSlide()">&#10094;</a>
+     <a class="next" onclick="nextSlide()">&#10095;</a>
+ </section>
 
 <!-- Add your content sections here -->
 
