--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <h1>CRAFTING TIMBER, SHAPING DREAMS</h1>
     </div>
      <div class="slideshow">
-         <img src="images/b6.jpg" alt="Image 1">
-         <img src="images/b7.jpg" alt="Image 2">
-         <img src="images/b8.jpg" alt="Image 3">
+         <img src="b6.jpg" alt="Image 1">
+         <img src="b7.jpg" alt="Image 2">
+         <img src="b8.jpg" alt="Image 3">
      </div>
        <a class="prev" onclick="prevSlide()">&#10094;</a>
      <a class="next" onclick="nextSlide()">&#10095;</a>
