--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@
     </nav>
 </header>  
 
+    <!--for the slide show-->
+<section class="slideshow">
+    <div class="slide fade">
+        <img src="images/b7.jpg" alt="Slide 1">
+    </div>
+    <div class="slide fade">
+        <img src="images/b6.jpg" alt="Slide 2">
+    </div>
+    <div class="slide fade">
+        <img src="images/b8.jpg" alt="Slide 3">
+    </div>
+    <div class="slogan">Your Company Slogan Here</div>
+    <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+    <a class="next" onclick="changeSlide(1)">&#10095;</a>
+</section>
+
 
 <!-- Add your content sections here -->
 
