--- a/index.html
+++ b/index.html
@@ -39,18 +39,17 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-</header>  
-
-    <!--for the slide show-->
+</header>
+<!--for the slide show-->
 <section class="slideshow">
     <div class="slide fade">
-        <img src="b7.jpg" alt="Slide 1">
+        <img src="images/b7.jpg" alt="Slide 1">
     </div>
     <div class="slide fade">
-        <img src="b6.jpg" alt="Slide 2">
+        <img src="images/b6.jpg" alt="Slide 2">
     </div>
     <div class="slide fade">
-        <img src="b8.jpg" alt="Slide 3">
+        <img src="images/b8.jpg" alt="Slide 3">
     </div>
     <div class="slogan">Your Company Slogan Here</div>
     <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
@@ -58,6 +57,15 @@
 </section>
 
 
+<div class="section">
+    <div class="left-content">
+        <h2>About Us</h2>
+        <p>At John Bitar & Co, LTD, we take immense pride in our commitment to delivering high-quality timber products to meet a variety of construction and woodworking needs. With years of industry expertise and a dedication to sustainable practices, we have established ourselves as a leading timber production company.</p>
+    </div>
+    <div class="right-content">
+        <img src="images/jcm.jpg" alt="Company Image">
+    </div>
+</div>
 <!-- Add your content sections here -->
 
 </body>
