--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 <!--for the slide show-->
 <section class="slideshow">
     <div class="slide fade">
-        <img src="images/b7.jpg" alt="Slide 1">
+        <img src="b7.jpg" alt="Slide 1">
     </div>
     <div class="slide fade">
-        <img src="images/b6.jpg" alt="Slide 2">
+        <img src="b6.jpg" alt="Slide 2">
     </div>
     <div class="slide fade">
-        <img src="images/b8.jpg" alt="Slide 3">
+        <img src="b8.jpg" alt="Slide 3">
     </div>
     <div class="slogan">Your Company Slogan Here</div>
     <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
@@ -63,7 +63,7 @@
         <p>At John Bitar & Co, LTD, we take immense pride in our commitment to delivering high-quality timber products to meet a variety of construction and woodworking needs. With years of industry expertise and a dedication to sustainable practices, we have established ourselves as a leading timber production company.</p>
     </div>
     <div class="right-content">
-        <img src="images/jcm.jpg" alt="Company Image">
+        <img src="jcm.jpg" alt="Company Image">
     </div>
 </div>
 <!-- Add your content sections here -->
