--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="slide fade">
         <img src="b8.jpg" alt="Slide 3">
     </div>
-    <div class="slogan">Your Company Slogan Here</div>
+    <div class="slogan">CRAFTING TIMBER, SHAPING DREAMS</div>
     <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
     <a class="next" onclick="changeSlide(1)">&#10095;</a>
 </section>
@@ -66,6 +66,129 @@
         <img src="jcm.jpg" alt="Company Image">
     </div>
 </div>
+
+<!-- Why Choose Us Section -->
+<section id="why-choose-us">
+    <h2>Why Choose Us</h2>
+    <div class="card-container">
+        <!-- Card 1: Quality Timber -->
+        <div class="card">
+            <img src="clock.png" alt="Quality Timber">
+            <div class="card-content">
+                <h3>Quality Timber</h3>
+                <p>We provide top-notch quality timber that meets industry standards.</p>
+            </div>
+        </div>
+
+        <!-- Card 2: Sustainability -->
+        <div class="card">
+            <img src="sus.png" alt="Sustainability">
+            <div class="card-content">
+                <h3>Sustainability</h3>
+                <p>Our commitment to sustainability ensures eco-friendly practices throughout our production.</p>
+            </div>
+        </div>
+
+        <!-- Card 3: Experienced Team -->
+        <div class="card">
+            <img src="tm.png" alt="Experienced Team">
+            <div class="card-content">
+                <h3>Experienced Team</h3>
+                <p>Our team brings years of expertise to deliver the best solutions for your timber needs.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+ <!-- Explore Our Products Section -->
+ <section id="explore-products">
+    <h2>Explore Our Products</h2>
+    <p>Discover our high-quality timber products.</p>
+    <button onclick="scrollToProducts()">Explore Now</button>
+</section>
+
+<!-- Products Section -->
+<section id="products">
+    <h2>Our Products</h2>
+    <div class="product-container">
+        <!-- Product 1: Lumber -->
+        <div class="product" id="lumber">
+            <div class="product-image" style="background-image: url('lum2.jpg');"></div>
+            <div class="product-name">Lumber</div>
+        </div>
+
+        <!-- Product 2: Slice Veneer -->
+        <div class="product" id="slice-veneer">
+            <div class="product-image" style="background-image: url('vn4.jpg');"></div>
+            <div class="product-name">Slice Veneer</div>
+        </div>
+
+        <!-- Product 3: Rotary -->
+        <div class="product" id="rotary">
+            <div class="product-image" style="background-image: url('images/vn1.jpg');"></div>
+            <div class="product-name">Rotary</div>
+        </div>
+
+        <!-- Product 4: Plywood -->
+        <div class="product" id="plywood">
+            <div class="product-image" style="background-image: url('pl1.jpg');"></div>
+            <div class="product-name">Plywood</div>
+        </div>
+
+        <!-- Product 5: Molding -->
+        <div class="product" id="molding">
+            <div class="product-image" style="background-image: url('fj.jpg');"></div>
+            <div class="product-name">Molding</div>
+        </div>
+    </div>
+</section>
+
+<!-- Customer Reviews Section -->
+<section id="customer-reviews">
+    <h2>Customer Reviews</h2>
+    <div class="review-container">
+        <!-- Review 1 -->
+        <div class="review">
+            <div class="customer-info">
+                <img src="md.jfif" alt="Customer 1" class="customer-avatar">
+                <div class="customer-name">John Doe</div>
+            </div>
+            <p class="review-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in turpis vel justo commodo bibendum ac ut nisl. Ut a metus vel ligula pharetra blandit.</p>
+        </div>
+
+        <!-- Review 2 -->
+        <div class="review">
+            <div class="customer-info">
+                <img src="ad.jfif" alt="Customer 2" class="customer-avatar">
+                <div class="customer-name">Jane Smith</div>
+            </div>
+            <p class="review-text">Suspendisse potenti. Vivamus finibus commodo mi, vitae volutpat ligula suscipit in. Aenean eu tellus non justo posuere fringilla.</p>
+        </div>
+
+         <!-- Review 3 -->
+         <div class="review">
+            <div class="customer-info">
+                <img src="ad.jfif" alt="Customer 3" class="customer-avatar">
+                <div class="customer-name">Jane Smith</div>
+            </div>
+            <p class="review-text">Suspendisse potenti. Vivamus finibus commodo mi, vitae volutpat ligula suscipit in. Aenean eu tellus non justo posuere fringilla.</p>
+        </div>
+
+
+        <!-- Add more reviews as needed -->
+
+    </div>
+</section>
+
+<!-- Map Section -->
+<section id="map">
+    <h2>Our Location</h2>
+    <div class="map-container">
+        <!-- Replace the following iframe with the embed code from Google Maps or any other map provider -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.305572056311!2d-2.4831438257372103!3d6.223379426579693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfc34d6784372671%3A0x60d4d28ad8a97c5c!2sJohn%20Bitar%20Company%20Limited!5e0!3m2!1sen!2sgh!4v1700507317425!5m2!1sen!2sgh" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+</section>
+
 <!-- Add your content sections here -->
 
 </body>
